import java.text.SimpleDateFormat

/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/8.1.1/userguide/building_java_projects.html
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'com.google.guava:guava:33.4.0-jre'                  // com.google.common.base.Enums
    implementation 'commons-cli:commons-cli:1.9.0'
    implementation 'org.apache.commons:commons-collections4:4.5.0-M3'  // IP Allowlist
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.4'
    implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
    implementation 'org.yaml:snakeyaml:2.0'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'moba.server.App'
}

tasks.named('test', Test) {
    useJUnitPlatform()

    maxHeapSize = '1G'

    testLogging {
        events "passed"
    }
}

ext.getVersion = { ->
    def build = project['version.build'].toInteger()
    def newBuild = build + 1

    // Update gradle.properties file
    def gradleProps = new File(project.rootDir, 'gradle.properties')
    def props = new Properties()
    props.load(new FileInputStream(gradleProps))
    props.setProperty('version.build', newBuild.toString())
    props.store(new FileOutputStream(gradleProps), null)

    project['version.build'] = newBuild.toString()

    return project['version.major'] + '.' +
           project['version.minor'] + '.' +
           project['version.patch'] + '-' +
           String.format("%04d", build)

}

version = ext.getVersion()

jar {
    manifest {
        attributes (
            'Built-By'       : System.properties['user.name'],
            'Build-Timestamp': new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
           // 'Build-Revision' : versioning.info.commit,
            'Created-By'     : "Gradle ${gradle.gradleVersion}",
            'Build-Jdk'      : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
            'Build-OS'       : "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}",

            'Implementation-Title': rootProject.name,
            'Implementation-Version': version
        )
    }
}


